--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>is your birthday lucky?</title>
     <link rel="stylesheet" href="style.css">
-    
+
 </head>
 
 <body>
@@ -25,6 +25,7 @@
                 check
             </button>
             <p class="msg"></p>
+            <p class="emoji"></p>
         </div>
         <footer class="footer">
             <h2>Let's Connect</h2>
